# rosProject

./: README.md  batteryLog.txt  batteryParser.py  locations.txt  polygonCoordinate.txt  simStart.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: quad.pc  robot_upstart.pc
devel/lib/python2.7/dist-packages/robot_upstart/: __init__.py
devel/lib/quad/: ======quadDirection  ======quadLap  ======quadRWP  ======quadWalk  quadDirection  quadLap  quadRWP  quadWalk  radioListener
devel/share/quad/cmake/: quadConfig.cmake
devel/share/robot_upstart/cmake/: robot_upstartConfig.cmake
quadWS/devel/: .catkin  .rosinstall  setup.sh
quadWS/devel/lib/pkgconfig/: quad.pc
quadWS/devel/lib/quad/: quadDirection  quadLap  quadRWP  quadWalk  radioListener
quadWS/devel/share/quad/cmake/: quadConfig.cmake
quadWS/src/quad/: CMakeLists.txt  botLib.cpp  botLib.h  quadDirection.cpp  quadWalk.cpp
quadWS/src/quad/launch/: base.launch
src/quad/: CMakeLists.txt  botLib.cpp  botLib.h  package.xml  polygonCoordinate.txt  quadDirection.cpp  quadLap.cpp  quadRWP.cpp  quadWalk.cpp  quadWalkV1.cpp  quadWalkV2.cpp  radioListener.cpp  speedMax.cpp
