<?xml version="1.0"?>
<package>
  <name>quad</name>
  <version>0.0.0</version>
  <description>package to do a lap around quad</description>
  <license>BSD</license>
  <maintainer email="amontano405@gmail.com">adam</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>mavros_msgs</run_depend>
</package>
